--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,5 +1,5 @@
 # GitHub Action for generating a contribution graph with a snake eating your contributions.
-name: Generate Snake
+name: Generate Snake Game
 
 # Controls when the action will run.
 on:
